dev: add test & build scripts & release scripts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,17 @@
 {
   "cSpell.words": [
     "execa",
+    "iife",
+    "invok",
     "jsdelivr",
+    "outdir",
+    "outfile",
+    "premajor",
+    "preminor",
+    "prepatch",
     "setsuna",
     "setsunajs",
+    "tsdoc",
     "Uncaptured",
     "usagisah"
   ]
